initial setup done

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,11 @@ dvc
 pandas
 numpy
 PyYAML
+mkdocs-material
+datasets
+transformers[sentencepiece]
+folium==0.2.1
+tensorflow
 
 ### local packages -
-# -e . # << uncomment this to install from setup.py
+-e . # << uncomment this to install from setup.py
